# Jinja2Cpp

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  appveyor.yml.disabled  conanfile.txt  jinja2cpp.pc.in
.github/workflows/: codeql-analysis.yml  linux-build.yml  windows-build.yml
cmake/: build_thirdparty.cmake  code_coverage.cmake  collect_sources.cmake  coverage.cmake  jinja2cpp.pc.in  sanitizer.cmake  sanitizer.memory.cmake
cmake/patches/: 0001-fix-custom_command-error.patch  0001-fix-skip-install-rules.patch  rapid_json_improvements.patch
cmake/public/: FindJinja2Cpp.cmake  jinja2cpp-config-deps-external-boost.cmake.in  jinja2cpp-config-deps-external.cmake.in  jinja2cpp-config.cmake.in
include/jinja2cpp/: diagnostic_consumer.h.h  error_handler.h  error_info.h  filesystem_handler.h  generic_list.h  generic_list_impl.h  generic_list_iterator.h  parse_result.h  polymorphic_value.h  reflected_value.h  string_helpers.h  template.h  template_env.h  template_env.h.h  user_callable.h  value.h  value_ptr.h  value_ptr.hpp
include/jinja2cpp/binding/: boost_json.h  nlohmann_json.h  rapid_json.h
include/jinja2cpp/polymorphic_value/: polymorphic.h  polymorphic_cxx14.h
include/jinja2cpp/utils/: i_comparable.h
scripts/: build.sh
src/: ast_visitor.h  error_handling.h  error_info.cpp  expression_evaluator.cpp  expression_evaluator.h  expression_parser.cpp  expression_parser.h  filesystem_handler.cpp  filters.cpp  filters.h  function_base.h  generic_adapters.h  generic_list.cpp  helpers.h  internal_value.cpp  internal_value.h  lexer.cpp  lexer.h  lexertk.h  out_stream.h  rapid_json_serializer.cpp  rapid_json_serializer.h  render_context.h  renderer.h  serialize_filters.cpp  statements.cpp  statements.h  string_converter_filter.cpp  template.cpp  template_env.cpp  template_impl.cpp  template_impl.h  template_parser.cpp  template_parser.h  testers.cpp  testers.h  value.cpp  value_helpers.h  value_visitors.h
src/binding/: boost_json_parser.h  boost_json_serializer.cpp  boost_json_serializer.h  nlohmann_json_parser.h  nlohmann_json_serializer.cpp  nlohmann_json_serializer.h  rapid_json_parser.h  rapid_json_serializer.cpp  rapid_json_serializer.h
test/: basic_tests.cpp  errors_test.cpp  expressions_test.cpp  extends_test.cpp  filesystem_handler_test.cpp  filters_test.cpp  forloop_test.cpp  helpers_tests.cpp  if_test.cpp  import_test.cpp  includes_test.cpp  includes_test.cpp.cpp  macro_test.cpp  metadata_test.cpp  nlohmann_json_binding_test.cpp  perf_test.cpp  rapid_json_binding_test.cpp  rapid_json_serializer_test.cpp  set_test.cpp  statements_tets.cpp  test_tools.h  testers_test.cpp  tojson_filter_test.cpp  user_callable_test.cpp
test/binding/: boost_json_binding_test.cpp  nlohmann_json_binding_test.cpp  rapid_json_binding_test.cpp  rapid_json_serializer_test.cpp
